--- a/index2.html
+++ b/index2.html
@@ -159,21 +159,28 @@
   <div class="card">
     <h2>A Heartfelt Apology</h2>
     <p>Dear Darasimi💞,</p>
-    <p> I tried to search deeply for a word deeper than sorry to express myself, i found none, I guess words failed me this time. 
-        I tried looking for an act to express how sorry i am , I found none, I outdid myself.
-        How can I reachout to her? she's so close to my heart but my words have created a wall between us, now she can hardly hear me 
-        How can I express my deepest feeings ? she's so close but my words have created a fog, now she can hardly see me 
-        <p> Pardon me for speaking like i'm writing a poem , I just can't withhold it. Every memories we shared is enough to inspire a writer.
-            Times where my migraine did not go away by using paracetermol, or when my cupboard was without a cockroach, or is it when you showed support despite going through personal stuffs 
-            or the days where the calendar testifyed you are a 10/10, and so many more.
-            <p>
-                I know I fucked up and realizing how dissappointed you're, you have every right not to be willing to talk to me again.
-                But this is from my heart those words means nothingggg, I didn't think my words through. Please talk to me, I don't care how long it takes to get to you, i'll be by the door.
-                From the left part of my chest i feel you and i'm hurt i said those words to you.
+    <p> 
 
-               <p>
-                Take care my favourite girl 💞...  I love you 💞💖
-               </p> 
+I tried to search deeply for a word stronger than *sorry* to express myself, but I found none. I guess words failed me this time.  
+I tried to find an action to show how sorry I am, but I found none. I outdid myself.  
+
+How can I reach out to her? She’s so close to my heart, yet my words have built a wall between us. Now she can hardly hear me.  
+How can I express my deepest feelings? She’s so near, but my words have created a fog, and now she can barely see me.  
+
+<p>  
+Pardon me for speaking as though I’m writing a poem; I just can’t hold it back. Every memory we shared is enough to inspire a writer.  
+The times when my migraine didn’t go away even after using paracetamol, or when my cupboard miraculously had a cockroach. Or those moments when you offered your unwavering support despite going through personal struggles yourself.  
+And of course, the days when even the calendar confirmed you were a 10/10—there are so many more.  
+</p>  
+
+I know I messed up, and realizing how disappointed you are hurts me deeply. You have every right not to want to talk to me again.  
+But please, from the bottom of my heart, believe me when I say those words meant nothing. I didn’t think them through. Please talk to me. I don’t care how long it takes—I’ll be waiting by the door.  
+
+From the left side of my chest, I feel you, and it pains me that I said those things to you.  
+
+<p>  
+Take care, my favorite girl 💞. I love you 💞💖.  
+</p>  
             </p>
 
     <a href="#music" class="btn" onclick="playMusic()">Listen to the Song</a>
