--- a/index2.html
+++ b/index2.html
@@ -161,7 +161,7 @@
     <p>Dear Darasimi💞,</p>
     <p> 
 
-I tried to search deeply for a word stronger than *sorry* to express myself, but I found none. I guess words failed me this time.  
+I tried to search deeply for a word stronger than sorry to express myself, but I found none. I guess words failed me this time.  
 I tried to find an action to show how sorry I am, but I found none. I outdid myself.  
 
 How can I reach out to her? She’s so close to my heart, yet my words have built a wall between us. Now she can hardly hear me.  
@@ -174,7 +174,7 @@ And of course, the days when even the calendar confirmed you were a 10/10—ther
 </p>  
 
 I know I messed up, and realizing how disappointed you are hurts me deeply. You have every right not to want to talk to me again.  
-But please, from the bottom of my heart, believe me when I say those words meant nothing. I didn’t think them through. Please talk to me. I don’t care how long it takes—I’ll be waiting by the door.  
+But please, from the bottom of my heart, believe me when I say those words meant nothing. I didn’t think them through. Talk to me D. I don’t care how long it takes—I’ll be waiting by the door.  
 
 From the left side of my chest, I feel you, and it pains me that I said those things to you.  
 
